<resources>
    <string name="app_name">BilGit</string>
    <string name="hint_login">Login</string>
    <string name="hint_email">Email</string>
    <string name="signup">Signup</string>
    <string name="help">Help</string>
    <string name="anonymous_login">Anonymous Login</string>
    <string name="password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="register">register</string>
    <string name="nearest_places">Nearest Places</string>
    <string name="place_name">Place Name</string>
    <string name="place1">Place 1</string>
    <string name="place2">Place 2</string>
    <string name="place3">Place 3</string>
    <string name="place4">Place 4</string>
    <string name="place5">Place 5</string>
    <string name="distance1">Distance 1</string>
    <string name="distance2">Distance 2</string>
    <string name="distance3">Distance 3</string>
    <string name="distance4">Distance 4</string>
    <string name="distance5">Distance 5</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="student">Student</string>
    <string name="staff">Staff</string>
</resources>