<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RegisterFragment"
    android:background="@color/white_100">

    <ImageView
        android:id="@+id/imageLogoReg"
        android:layout_width="195dp"
        android:layout_height="169dp"
        android:src="@drawable/bilgit_login"
        app:layout_constraintBottom_toTopOf="@+id/rgReg"
        app:layout_constraintEnd_toEndOf="@+id/rgReg"
        app:layout_constraintStart_toStartOf="@+id/rgReg" />

    <TextView
        android:id="@+id/textSignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/teal_700"
        app:layout_constraintEnd_toEndOf="@+id/buttonRegister"
        app:layout_constraintStart_toStartOf="@+id/buttonRegister"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister" />

    <EditText
        android:id="@+id/editTextEmailReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextPasswordReg"
        app:layout_constraintEnd_toEndOf="@+id/editTextPasswordReg"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextPasswordReg" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="Username"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmailReg"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmailReg"
        app:layout_constraintStart_toStartOf="@+id/editTextEmailReg" />

    <EditText
        android:id="@+id/editTextPasswordReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegister"
        app:layout_constraintEnd_toEndOf="@+id/buttonRegister"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/buttonRegister" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="208dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.788" />

    <Spinner
        android:id="@+id/spinnerDep"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:entries="@array/departments_array"
        android:spinnerMode="dialog"
        app:layout_constraintBottom_toTopOf="@+id/editTextUsername"
        app:layout_constraintEnd_toEndOf="@+id/editTextUsername"
        app:layout_constraintStart_toStartOf="@+id/editTextUsername" />

    <RadioGroup
        android:id="@+id/rgReg"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/spinnerDep"
        app:layout_constraintEnd_toEndOf="@+id/spinnerDep"
        app:layout_constraintStart_toStartOf="@+id/spinnerDep">

        <RadioButton
            android:id="@+id/rbStudent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/student" />

        <RadioButton
            android:id="@+id/rbStaff"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/staff" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>