<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginFragment"
    android:background="@color/white_100">

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        app:layout_constraintEnd_toEndOf="@+id/buttonLogin"
        app:layout_constraintStart_toStartOf="@+id/buttonLogin" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="208dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/hint_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.660" />

    <Button
        android:id="@+id/buttonLoginAnon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/anonymous_login"
        app:layout_constraintEnd_toEndOf="@+id/buttonLogin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonLogin"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <TextView
        android:id="@+id/textSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Create an account"
        android:textColor="@color/teal_700"
        app:layout_constraintEnd_toEndOf="@+id/buttonLoginAnon"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/buttonLoginAnon"
        app:layout_constraintTop_toBottomOf="@+id/buttonLoginAnon" />

    <TextView
        android:id="@+id/textForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Forgot my password"
        android:textColor="@color/teal_700"
        app:layout_constraintEnd_toEndOf="@+id/buttonLoginAnon"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="@+id/buttonLoginAnon"
        app:layout_constraintTop_toBottomOf="@+id/textSignup" />

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="195dp"
        android:layout_height="169dp"
        android:src="@drawable/bilgit_login"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
        app:layout_constraintStart_toStartOf="@+id/editTextEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>